[gd_scene load_steps=10 format=4 uid="uid://btx75apydijlp"]

[ext_resource type="Script" uid="uid://ui1kaj2yuo7x" path="res://levels/basic_level/basic_level.gd" id="1_7ko8y"]
[ext_resource type="Script" uid="uid://ttf8w6ld41nf" path="res://core/map.gd" id="2_jxqax"]
[ext_resource type="Script" uid="uid://3jmxkgk2u0y4" path="res://core/snake_controller.gd" id="3_h6lqb"]
[ext_resource type="TileSet" uid="uid://bsh0dufafcqud" path="res://levels/basic_level/basic_level.tres" id="3_jxqax"]
[ext_resource type="Script" uid="uid://kl8j4i5obuy2" path="res://core/scene_tile_map_layer.gd" id="5_3mfs5"]
[ext_resource type="Script" uid="uid://brksyhsunayx6" path="res://core/snake_layer.gd" id="5_nyqwc"]
[ext_resource type="PackedScene" uid="uid://cdn1d2g20ncgm" path="res://ui/hud.tscn" id="6_ylr87"]
[ext_resource type="Script" uid="uid://bwn38kiep5yaq" path="res://levels/basic_level/object_spawner.gd" id="7_qoumo"]
[ext_resource type="Resource" uid="uid://bwj7qrd7i1dlt" path="res://resources/cherry.tres" id="8_607os"]

[node name="BasicLevel" type="Node2D" node_paths=PackedStringArray("snake_controller", "_map")]
script = ExtResource("1_7ko8y")
snake_controller = NodePath("Snake")
_map = NodePath("Map")

[node name="SnakeSpawnLocations" type="Node" parent="."]
unique_name_in_owner = true

[node name="Player1" type="Marker2D" parent="SnakeSpawnLocations"]
position = Vector2(-44, -20)

[node name="Player2" type="Marker2D" parent="SnakeSpawnLocations"]
position = Vector2(44, 28)

[node name="Snake" type="Node" parent="."]
script = ExtResource("3_h6lqb")
snake_head_tile = Vector2i(0, 3)
snake_body_tile = Vector2i(1, 3)

[node name="Snake2" type="Node" parent="."]
script = ExtResource("3_h6lqb")
snake_head_tile = Vector2i(0, 3)
snake_body_tile = Vector2i(1, 3)
is_keyboard = false

[node name="Map" type="Node2D" parent="." node_paths=PackedStringArray("_map", "_snake_layer")]
script = ExtResource("2_jxqax")
map_size = Vector2i(13, 8)
_map = NodePath("ObjectsMapLayer")
_snake_layer = NodePath("SnakeLayer")
food_index = Vector2i(2, 3)

[node name="FloorMapLayer" type="TileMapLayer" parent="Map"]
tile_map_data = PackedByteArray("AAD8//z/AAABAAEAAAD8//3/AAABAAEAAAD8//7/AAABAAEAAAD8////AQAAAAAAAQD8/wAAAAABAAEAAAD8/wEAAAABAAEAAAD8/wIAAAABAAEAAAD8/wMAAAABAAEAAAD9//z/AAABAAEAAAD9//3/AAABAAEAAAD9//7/AAABAAEAAAD9////AAABAAEAAAD9/wAAAAABAAEAAAD9/wEAAAABAAEAAAD9/wIAAAABAAEAAAD9/wMAAAABAAEAAAD+//z/AAABAAEAAAD+//3/AAABAAEAAAD+//7/AAABAAEAAAD+////AAABAAEAAAD+/wAAAAABAAEAAAD+/wEAAAABAAEAAAD+/wIAAAABAAEAAAD+/wMAAAABAAEAAAD///z/AAABAAEAAAD///3/AAABAAEAAAD///7/AAABAAEAAAD/////AAABAAEAAAD//wAAAAABAAEAAAD//wEAAAABAAEAAAD//wIAAAABAAEAAAD//wMAAAABAAEAAAAAAPz/AAABAAEAAAAAAP3/AAABAAEAAAAAAP7/AAABAAEAAAAAAP//AAABAAEAAAAAAAAAAAABAAEAAAAAAAEAAAABAAEAAAAAAAIAAAABAAEAAAAAAAMAAAABAAEAAAABAPz/AAABAAEAAAABAP3/AAABAAEAAAABAP7/AAABAAEAAAABAP//AAABAAEAAAABAAAAAAABAAEAAAABAAEAAAABAAEAAAABAAIAAAABAAEAAAABAAMAAAABAAEAAAACAPz/AAABAAEAAAACAP3/AAABAAEAAAACAP7/AAABAAEAAAACAP//AAABAAEAAAACAAAAAAABAAEAAAACAAEAAAABAAEAAAACAAIAAAABAAEAAAACAAMAAAABAAEAAAADAPz/AAABAAEAAAADAP3/AAABAAEAAAADAP7/AAABAAEAAAADAP//AAABAAEAAAADAAAAAAABAAEAAAADAAEAAAABAAEAAAADAAIAAAABAAEAAAADAAMAAAABAAEAAAD4//r/AAABAAEAAAD4//v/AAABAAEAAAD4//z/AAABAAEAAAD4//3/AAABAAEAAAD4//7/AAABAAEAAAD4////AAABAAEAAAD4/wAAAAABAAEAAAD4/wEAAAABAAEAAAD4/wIAAAABAAEAAAD4/wMAAAABAAEAAAD4/wQAAAABAAEAAAD4/wUAAAABAAEAAAD5//r/AAABAAEAAAD5//v/AAABAAEAAAD5//z/AAABAAEAAAD5//3/AAABAAEAAAD5//7/AAABAAEAAAD5////AAABAAEAAAD5/wAAAAABAAEAAAD5/wEAAAABAAEAAAD5/wQAAAABAAEAAAD5/wUAAAABAAEAAAD6//r/AAABAAEAAAD6//v/AAABAAEAAAD6//z/AAABAAEAAAD6//3/AAABAAEAAAD6//7/AAABAAEAAAD6////AAABAAEAAAD6/wAAAAABAAEAAAD6/wEAAAABAAEAAAD6/wIAAAABAAEAAAD6/wMAAAABAAEAAAD6/wQAAAABAAEAAAD6/wUAAAABAAEAAAD7//r/AAABAAEAAAD7//v/AAABAAEAAAD7//z/AAABAAEAAAD7//3/AAABAAEAAAD7//7/AAABAAEAAAD7////AAABAAEAAAD7/wAAAAABAAEAAAD7/wEAAAABAAEAAAD7/wIAAAABAAEAAAD7/wMAAAABAAEAAAD7/wQAAAABAAEAAAD7/wUAAAABAAEAAAD8//r/AAABAAEAAAD8//v/AAABAAEAAAD8/wQAAAABAAEAAAD8/wUAAAABAAEAAAD9//r/AAABAAEAAAD9//v/AAABAAEAAAD9/wQAAAABAAEAAAD9/wUAAAABAAEAAAD+//r/AAABAAEAAAD+//v/AAABAAEAAAD+/wUAAAABAAEAAAD///r/AAABAAEAAAD///v/AAABAAEAAAD//wUAAAABAAEAAAAAAPr/AAABAAEAAAAAAPv/AAABAAEAAAAAAAUAAAABAAEAAAABAPr/AAABAAEAAAABAPv/AAABAAEAAAABAAQAAAABAAEAAAABAAUAAAABAAEAAAACAPr/AAABAAEAAAACAPv/AAABAAEAAAACAAQAAAABAAEAAAACAAUAAAABAAEAAAADAPr/AAABAAEAAAADAPv/AAABAAEAAAADAAQAAAABAAEAAAADAAUAAAABAAEAAAAEAPr/AAABAAEAAAAEAPv/AAABAAEAAAAEAPz/AAABAAEAAAAEAP3/AAABAAEAAAAEAP7/AAABAAEAAAAEAP//AAABAAEAAAAEAAAAAAABAAEAAAAEAAEAAAABAAEAAAAEAAIAAAABAAEAAAAEAAMAAAABAAEAAAAEAAQAAAABAAEAAAAEAAUAAAABAAEAAAAFAPr/AAABAAEAAAAFAPv/AAABAAEAAAAFAPz/AAABAAEAAAAFAP3/AAABAAEAAAAFAP7/AAABAAEAAAAFAP//AAABAAEAAAAFAAAAAAABAAEAAAAFAAEAAAABAAEAAAAFAAIAAAABAAEAAAAFAAMAAAABAAEAAAAFAAQAAAABAAEAAAAFAAUAAAABAAEAAAAGAPr/AAABAAEAAAAGAPv/AAABAAEAAAAGAPz/AAABAAEAAAAGAP3/AAABAAEAAAAGAP7/AAABAAEAAAAGAP//AAABAAEAAAAGAAAAAAABAAEAAAAGAAEAAAABAAEAAAAGAAIAAAABAAEAAAAGAAMAAAABAAEAAAAGAAQAAAABAAEAAAAGAAUAAAABAAEAAAAHAPr/AAABAAEAAAAHAPv/AAABAAEAAAAHAPz/AAABAAEAAAAHAP3/AAABAAEAAAAHAP7/AAABAAEAAAAHAP//AAABAAEAAAAHAAAAAAABAAEAAAAHAAEAAAABAAEAAAAHAAIAAAABAAEAAAAHAAMAAAABAAEAAAAHAAQAAAABAAEAAAAHAAUAAAABAAEAAAD5/wIAAAABAAEAAAD5/wMAAAABAAEAAAD+/wQAAAABAAEAAAD//wQAAAABAAEAAAAAAAQAAAABAAEAAAAIAPr/AAABAAEAAAAIAPv/AAABAAEAAAAIAPz/AAABAAEAAAAIAP3/AAABAAEAAAAIAP7/AAABAAEAAAAIAP//AAABAAEAAAAIAAAAAAABAAEAAAAIAAEAAAABAAEAAAAIAAIAAAABAAEAAAAIAAMAAAABAAEAAAAIAAQAAAABAAEAAAAIAAUAAAABAAEAAAD4/wYAAAABAAEAAAD5/wYAAAABAAEAAAD6/wYAAAABAAEAAAD7/wYAAAABAAEAAAD8/wYAAAABAAEAAAD9/wYAAAABAAEAAAD+/wYAAAABAAEAAAD//wYAAAABAAEAAAAAAAYAAAABAAEAAAABAAYAAAABAAEAAAACAAYAAAABAAEAAAADAAYAAAABAAEAAAAEAAYAAAABAAEAAAAFAAYAAAABAAEAAAAGAAYAAAABAAEAAAAHAAYAAAABAAEAAAAIAAYAAAABAAEAAAD3//n/AAABAAEAAAD4//n/AAABAAEAAAD5//n/AAABAAEAAAD6//n/AAABAAEAAAD7//n/AAABAAEAAAD8//n/AAABAAEAAAD9//n/AAABAAEAAAD+//n/AAABAAEAAAD///n/AAABAAEAAAAAAPn/AAABAAEAAAABAPn/AAABAAEAAAACAPn/AAABAAEAAAADAPn/AAABAAEAAAAEAPn/AAABAAEAAAAFAPn/AAABAAEAAAAGAPn/AAABAAEAAAAHAPn/AAABAAEAAAAIAPn/AAABAAEAAAD3//r/AAABAAEAAAD3//v/AAABAAEAAAD3//z/AAABAAEAAAD3//3/AAABAAEAAAD3//7/AAABAAEAAAD3////AAABAAEAAAD3/wAAAAABAAEAAAD3/wEAAAABAAEAAAD3/wIAAAABAAEAAAD3/wMAAAABAAEAAAD3/wYAAAABAAEAAAD3/wUAAAABAAEAAAD3/wQAAAABAAEAAAA=")
tile_set = ExtResource("3_jxqax")

[node name="ObjectsMapLayer" type="TileMapLayer" parent="Map"]
tile_map_data = PackedByteArray("AAD+//v/AAABAAAAAAD+/wUAAAABAAAAAAD+//r/AAAHAAMAAAAAAPr/AAAHAAMAAAAHAP7/AAAAAAEAAAD3//7/AAAHAAMAAAD3/wAAAAAHAAMAAAD3/wEAAAAHAAMAAAACAPv/AAABAAAAAAADAPv/AAABAAIAAAAEAPv/AAABAAAAAAD6//v/AAABAAAAAAD7//v/AAABAAIAAAD8//v/AAABAAIAAAD9//v/AAABAAIAAAAFAPv/AAABAAAAAAD///r/AAAHAAMAAAAHAPv/AAACAAAAAAAHAPz/AAACAAEAAAAHAP3/AAACAAEAAAAHAAIAAAACAAEAAAAHAAMAAAACAAEAAAAGAPv/AAABAAIAAAD6/wUAAAABAAAAAAD7/wUAAAABAAAAAAD8/wUAAAABAAAAAAD9/wUAAAABAAAAAAACAAUAAAABAAAAAAADAAUAAAABAAIAAAAEAAUAAAABAAIAAAAFAAUAAAABAAIAAAAGAAUAAAABAAAAAAAHAAUAAAACAAIAAAAHAAQAAAACAAEAAAAIAP//AAAHAAMAAAAIAAAAAAAHAAMAAAAIAAEAAAAHAAMAAAABAPr/AAAHAAMAAAD//wYAAAAHAAMAAAAAAAYAAAAHAAMAAAABAAYAAAAHAAMAAAD4//v/AAAAAAAAAAD4//z/AAAAAAEAAAD4//3/AAACAAEAAAD4//7/AAACAAEAAAD4/wIAAAACAAEAAAD4/wMAAAAAAAEAAAD4/wQAAAACAAEAAAD4/wUAAAAAAAIAAAD5//v/AAABAAIAAAD5/wUAAAABAAIAAAABAAUAAAABAAAAAAABAPv/AAABAAIAAAD3//r/AAAHAAMAAAD3//v/AAAHAAMAAAD3//z/AAAHAAMAAAD3//3/AAAHAAMAAAD3/wIAAAAHAAMAAAD3/wMAAAAHAAMAAAD3/wQAAAAHAAMAAAD3/wUAAAAHAAMAAAD3/wYAAAAHAAMAAAD3////AAAHAAMAAAD4/wYAAAAHAAMAAAD5/wYAAAAHAAMAAAD6/wYAAAAHAAMAAAD7/wYAAAAHAAMAAAD8/wYAAAAHAAMAAAD9/wYAAAAHAAMAAAD+/wYAAAAHAAMAAAACAAYAAAAHAAMAAAADAAYAAAAHAAMAAAAEAAYAAAAHAAMAAAAFAAYAAAAHAAMAAAAGAAYAAAAHAAMAAAAHAAYAAAAHAAMAAAAIAAYAAAAHAAMAAAAIAPr/AAAHAAMAAAAIAPv/AAAHAAMAAAAIAPz/AAAHAAMAAAAIAP3/AAAHAAMAAAAIAP7/AAAHAAMAAAAIAAIAAAAHAAMAAAAIAAMAAAAHAAMAAAAIAAQAAAAHAAMAAAAIAAUAAAAHAAMAAAD4//r/AAAHAAMAAAD5//r/AAAHAAMAAAD6//r/AAAHAAMAAAD7//r/AAAHAAMAAAD8//r/AAAHAAMAAAD9//r/AAAHAAMAAAACAPr/AAAHAAMAAAADAPr/AAAHAAMAAAAEAPr/AAAHAAMAAAAFAPr/AAAHAAMAAAAGAPr/AAAHAAMAAAAHAPr/AAAHAAMAAAD/////AAACAAMAAAAAAAAAAAACAAMAAAA=")
tile_set = ExtResource("3_jxqax")
script = ExtResource("5_3mfs5")
metadata/_custom_type_script = ExtResource("5_3mfs5")

[node name="SnakeLayer" type="TileMapLayer" parent="Map"]
tile_map_data = PackedByteArray("AAD3//r/AAAHAAMAAAD3//v/AAAHAAMAAAD3//z/AAAHAAMAAAD3//3/AAAHAAMAAAD3//7/AAAHAAMAAAD3/wAAAAAHAAMAAAD3/wEAAAAHAAMAAAD3/wIAAAAHAAMAAAD3/wMAAAAHAAMAAAD3/wQAAAAHAAMAAAD3/wUAAAAHAAMAAAD3/wYAAAAHAAMAAAD4/wYAAAAHAAMAAAD5/wYAAAAHAAMAAAD6/wYAAAAHAAMAAAD7/wYAAAAHAAMAAAD8/wYAAAAHAAMAAAD9/wYAAAAHAAMAAAD+/wYAAAAHAAMAAAD//wYAAAAHAAMAAAAAAAYAAAAHAAMAAAABAAYAAAAHAAMAAAACAAYAAAAHAAMAAAADAAYAAAAHAAMAAAAEAAYAAAAHAAMAAAAFAAYAAAAHAAMAAAAGAAYAAAAHAAMAAAAHAAYAAAAHAAMAAAAIAAYAAAAHAAMAAAAIAPr/AAAHAAMAAAAIAPv/AAAHAAMAAAAIAPz/AAAHAAMAAAAIAP3/AAAHAAMAAAAIAP7/AAAHAAMAAAAIAP//AAAHAAMAAAAIAAAAAAAHAAMAAAAIAAEAAAAHAAMAAAAIAAIAAAAHAAMAAAAIAAMAAAAHAAMAAAAIAAQAAAAHAAMAAAAIAAUAAAAHAAMAAAD4//r/AAAHAAMAAAD5//r/AAAHAAMAAAD6//r/AAAHAAMAAAD7//r/AAAHAAMAAAD8//r/AAAHAAMAAAD9//r/AAAHAAMAAAD+//r/AAAHAAMAAAD///r/AAAHAAMAAAAAAPr/AAAHAAMAAAABAPr/AAAHAAMAAAACAPr/AAAHAAMAAAADAPr/AAAHAAMAAAAEAPr/AAAHAAMAAAAFAPr/AAAHAAMAAAAGAPr/AAAHAAMAAAAHAPr/AAAHAAMAAAD3////AAAHAAMAAAA=")
tile_set = ExtResource("3_jxqax")
script = ExtResource("5_nyqwc")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(7, 7)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Hud" parent="CanvasLayer" instance=ExtResource("6_ylr87")]

[node name="FoodSpawner" type="Node" parent="." node_paths=PackedStringArray("map")]
script = ExtResource("7_qoumo")
map_object = ExtResource("8_607os")
map = NodePath("../Map")

[node name="FoodSpawnTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true
